RestaurantManagement/src/objects/BIll_Item__c.object
<CustomObject>
    <fields>
        <fullName>Bill__c</fullName>
        <label>Bill</label>
        <referenceTo>Bill__c</referenceTo>
        <relationshipLabel>Bill Items</relationshipLabel>
        <relationshipName>Bill_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ItemName__c</fullName>
        <label>ItemName</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>TotalPrice</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>BIll Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BIll Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>